{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 486,
  "lineage": "d5eb0c5f-ca14-da31-2e63-eb5d3958c84e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5ebf5bdf7a02541",
            "domain": "vpc",
            "id": "eipalloc-0e5ebf5bdf7a02541",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-203-163-126.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.163.126",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "dev",
              "Name": "tf-nat-eip",
              "Owner": "mohan"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-nat-eip",
              "Owner": "mohan"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:650782130988:internet-gateway/igw-0e1d1c16b26b846e8",
            "id": "igw-0e1d1c16b26b846e8",
            "owner_id": "650782130988",
            "tags": {
              "Env": "dev",
              "Name": "tf-igw",
              "Owner": "mohan"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-igw",
              "Owner": "mohan"
            },
            "vpc_id": "vpc-0846b8e0e8c7a397f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5ebf5bdf7a02541",
            "association_id": "eipassoc-027fc9c3e286cc1d1",
            "connectivity_type": "public",
            "id": "nat-091dfc3a9bc4450aa",
            "network_interface_id": "eni-0f8beb5d6b0f1f15c",
            "private_ip": "10.0.0.48",
            "public_ip": "13.203.163.126",
            "subnet_id": "subnet-0ea4216b5c3e5ec92",
            "tags": {
              "Env": "dev",
              "Name": "tf-ngw",
              "Owner": "mohan"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-ngw",
              "Owner": "mohan"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:650782130988:route-table/rtb-076edb4b1511fb361",
            "id": "rtb-076edb4b1511fb361",
            "owner_id": "650782130988",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-091dfc3a9bc4450aa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "tf-private-rt",
              "Owner": "mohan"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-private-rt",
              "Owner": "mohan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0846b8e0e8c7a397f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:650782130988:route-table/rtb-09bfc987de57ab192",
            "id": "rtb-09bfc987de57ab192",
            "owner_id": "650782130988",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e1d1c16b26b846e8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "tf-public-rt",
              "Owner": "mohan"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-public-rt",
              "Owner": "mohan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0846b8e0e8c7a397f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a4325c233786625",
            "route_table_id": "rtb-076edb4b1511fb361",
            "subnet_id": "subnet-0388a44bf30a58647"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f544c8b0305bb02",
            "route_table_id": "rtb-076edb4b1511fb361",
            "subnet_id": "subnet-06853c3ad345787f8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a294199370f483e3",
            "route_table_id": "rtb-09bfc987de57ab192",
            "subnet_id": "subnet-0ea4216b5c3e5ec92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ac0aca0dbf66747",
            "route_table_id": "rtb-09bfc987de57ab192",
            "subnet_id": "subnet-07e2e0617ba36f67b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:650782130988:subnet/subnet-0388a44bf30a58647",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0388a44bf30a58647",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "650782130988",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "tf-private-1",
              "Owner": "mohan"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-private-1",
              "Owner": "mohan"
            },
            "vpc_id": "vpc-0846b8e0e8c7a397f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:650782130988:subnet/subnet-06853c3ad345787f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06853c3ad345787f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "650782130988",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "tf-private-2",
              "Owner": "mohan"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-private-2",
              "Owner": "mohan"
            },
            "vpc_id": "vpc-0846b8e0e8c7a397f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:650782130988:subnet/subnet-0ea4216b5c3e5ec92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea4216b5c3e5ec92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "650782130988",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "tf-public-1",
              "Owner": "mohan"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-public-1",
              "Owner": "mohan"
            },
            "vpc_id": "vpc-0846b8e0e8c7a397f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:650782130988:subnet/subnet-07e2e0617ba36f67b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e2e0617ba36f67b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "650782130988",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "tf-public-2",
              "Owner": "mohan"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-public-2",
              "Owner": "mohan"
            },
            "vpc_id": "vpc-0846b8e0e8c7a397f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:650782130988:vpc/vpc-0846b8e0e8c7a397f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0b8a38d9679cd3d5e",
            "default_route_table_id": "rtb-0fbe98a6f8bb9d244",
            "default_security_group_id": "sg-0aeb5980d1e2b1a9d",
            "dhcp_options_id": "dopt-05faf2dcf89c161bb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0846b8e0e8c7a397f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fbe98a6f8bb9d244",
            "owner_id": "650782130988",
            "tags": {
              "Env": "dev",
              "Name": "tf-vpc-main",
              "Owner": "mohan"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-vpc-main",
              "Owner": "mohan"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}